--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vimfiles/bundle/molokai"]
 	path = vimfiles/bundle/molokai
 	url = https://github.com/tomasr/molokai.git
+[submodule "vimfiles/bundle/csv.vim"]
+	path = vimfiles/bundle/csv.vim
+	url = https://github.com/chrisbra/csv.vim
