--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vimfiles/bundle/csv.vim"]
 	path = vimfiles/bundle/csv.vim
 	url = https://github.com/chrisbra/csv.vim
+[submodule "vimfiles/bundle/vim-fugitive"]
+	path = vimfiles/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
