did i remove the submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "vim/shouldnotmatter"]
-	path = vim/shouldnotmatter
+	path = vim/shouldnotbreak/
 	url = https://github.com/tpope/vim-sensible
 [submodule "vim/vifi/vim-sensible"]
 	path = vim/vifi/vim-sensible
