--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,5 @@
-set-option -g default-shell /bin/zsh
-set -g utf8
-set-window-option -g utf8 on
-set -g default-terminal "screen-256color"
-set -g prefix C-a
+set-option -g default-terminal "screen-256color"
+set-option -g prefix C-z
+set-window-option -g mode-keys vi
 unbind C-b
-bind r source-file ~/.tmux.conf \; display "Reloaded"
-bind | split-window -h
-bind - split-window -v
+bind R source-file ~/.tmux.conf \; display "Reloaded"
