--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/bash
 set -g utf8
 set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
