--- a/tmux.conf
+++ b/tmux.conf
@@ -2,4 +2,30 @@ set-option -g default-terminal "screen-256color"
 set-option -g prefix C-z
 set-window-option -g mode-keys vi
 unbind C-b
+
+unbind C-s
+unbind C-q
+
+bind C-g send-keys C-g
+bind z   send-keys C-z
+bind Z   suspend-client
+bind C-z last-window
+bind `   select-window -t 0
+bind C-c new-window
+bind h   select-pane -L
+bind C-h resize-pane -L 5
+bind j   select-pane -D
+bind C-j resize-pane -D 5
+bind k   select-pane -U
+bind C-k resize-pane -U 5
+bind l   select-pane -R
+bind C-l resize-pane -R 5
+bind _   resize-pane -Z
+
+# testing
+bind H   join-pane -b -h -t !
+bind J   join-pane -t !
+bind @   join-pane -t !
+bind K   kill-pane
+
 bind R source-file ~/.tmux.conf \; display "Reloaded"
