--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,19 @@ bind l   select-pane -R
 bind C-l resize-pane -R 5
 bind _   resize-pane -Z
 
+bind -n S-Up copy-mode
+bind -n S-Right next-window
+bind -n S-Left previous-window
+bind -n S-Down command-prompt
+
 # testing
+set-option -g set-titles on
+set-option -g set-titles-string '#h: [#S:#W] #T'
+set-option -g status-left '[#S@#h]'
+set-option -g status-left-length 20
+set-option -g status-right '"#T"'
+set-option -g status-right-length 40
+
 bind H   join-pane -b -h -t !
 bind J   join-pane -t !
 bind @   join-pane -t !
