--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 set-option -g default-terminal "screen-256color"
 set-option -g prefix C-z
+set-option -gw xterm-keys on
 set-window-option -g mode-keys vi
 unbind C-b
 
