--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
 set-option -g prefix C-z
 set-option -gw xterm-keys on
 set-window-option -g mode-keys vi
-unbind C-b
+set -g default-terminal "screen-256color"
 
 unbind C-s
 unbind C-q
@@ -27,6 +27,7 @@ bind -n S-Up copy-mode
 bind -n S-Right next-window
 bind -n S-Left previous-window
 bind -n S-Down command-prompt
+
 
 # testing
 set-option -g set-titles on
